# django-ideahub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  constraint.txt  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: django.yml
ideahub/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ideahub/migrations/: 0001_initial.py
ideahub/static/css/: ideas.css
ideahub/templates/ideahub/: base.html  idea.html  ideas.html  set_collection_name.html  set_user.html
ideahub/templatetags/: ideas_extra.py
ideahub_app/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_forms.py  tests_views.py
